# boggle

./: .gitignore  README.md  notes.md  pyproject.toml
boggle/: bisect.py  boggle.py  boggle_grid.py  io.py  path.py
data/sample_images/: boggle_2.jpeg.crdownload
notebooks/: Untitled.ipynb  fast-word-search.ipynb  main.ipynb
