[tool.poetry]
name = "boggle"
version = "0.1.0"
description = ""
authors = ["fpgmaas"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.3"
ipython = "^7.22.0"
ipykernel = "^5.5.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
